--- a/css/styles.css
+++ b/css/styles.css
@@ -122,8 +122,9 @@ a{
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  height: auto;
+  height: 100%;
   width: 100%;
+  object-fit: cover;
   z-index: -1;
 }
 
