--- a/css/styles.css
+++ b/css/styles.css
@@ -397,6 +397,7 @@ a{
   height: 120px;
   opacity: 0.4;
   pointer-events: none;
+  z-index: 98;
 }
 .active-next {
   display: block;
@@ -407,6 +408,7 @@ a{
   height: 120px;
   opacity: 0.4;
   pointer-events: none;
+  z-index: 97;
 }
 .works__5 {
   background: url(../img/aeon.jpg) center center / cover;
