--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,7 @@ body {
   position: relative;
   cursor: none !important;
 }
-a{
+a {
   cursor: none;
 }
 
@@ -262,6 +262,36 @@ a{
 
   position: relative;
 }
+.cat-list-new {
+  text-decoration: none;
+  color: #fff;
+  display: block;
+  animation: new 1s ease 0s infinite forwards;
+}
+.cat-list-new:before {
+  content: '';
+  display: inline-block;
+  position: absolute;
+  left: -30px;
+  top: -10px;
+  z-index: -999;
+  width: 40px;
+  height: 40px;
+  background-image: url(../img/new.png);
+  background-size: contain;
+  vertical-align: middle;
+}
+@keyframes new {
+  0% {
+    transform: scale(1);
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1.1);
+  }
+}
+
 .cat-list:not(:last-child) {
   margin-bottom: 20px;
 }
@@ -315,7 +345,7 @@ a{
   text-shadow: 20px 20px 0px rgba(226, 177, 43, 0.3);
 }
 
-.cat-wrapper__ttl_desc{
+.cat-wrapper__ttl_desc {
   font-size: 20px;
   text-shadow: none;
   margin-top: 20px;
@@ -411,16 +441,16 @@ a{
   z-index: 97;
 }
 .works__5 {
-  background: url(../img/aeon.jpg) center center / cover;
+  background: url(../img/o-gram.jpg) center center / cover;
 }
 .works__4 {
-  background: url(../img/diane.jpg) center center / cover;
+  background: url(../img/aeon.jpg) center center / cover;
 }
 .works__3 {
-  background: url(../img/lifewithfootball.png) center center / cover;
+  background: url(../img/diane.jpg) center center / cover;
 }
 .works__2 {
-  background: url(../img/niseko.png) center center / cover;
+  background: url(../img/lifewithfootball.png) center center / cover;
 }
 .works__1 {
   background: url(../img/comingsoon.jpg) center center / cover;
@@ -464,7 +494,6 @@ a{
   color: #000;
 }
 
-
 .works__ttl {
   font-family: "Open Sans", sans-serif;
   width: 100%;
@@ -480,7 +509,6 @@ a{
   color: rgb(226, 177, 43);
   font-size: 40px;
 }
-
 
 .works__next {
   bottom: 0;
@@ -567,7 +595,7 @@ a{
 .main__top-section {
   opacity: 0;
 }
-.main__top-section_en{
+.main__top-section_en {
   font-size: 15px;
   padding-left: 10px;
 }
